--- a/index_component.html
+++ b/index_component.html
@@ -4,33 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>인프런-끝말잇기</title>
+    <title>인프런-끝말잇기-component</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 
 <body>
-    <div id="app">
+    <div id="app"> 
+        <word-relay></word-relay>
+        <word-relay></word-relay>
+        <word-relay></word-relay>
+</div>
+<script>
+// 컴포넌트는 작업을 반복할 수 있지만, 중복은 제거하는 방법
+//컴포넌트는 인스턴스보다 위, app id보다는 아래
+//전역 컴포넌트라고 부름 - 화면은 이미 정해져 있다. 데이터로 제어하는 것 뿐
+//컴포넌트에 차이를 주는 방법 : props -  부모에게 물려받는 값
+    Vue.component('word-relay', {
+        template: ` <div>
         <div>끝말잇기시작: {{ word }}</div>
         
         <form v-on:submit="check_word">
             <input type="text" v-model="myAnswer" ref="ans">&nbsp;&nbsp;
             <input type="submit" value="끝말잇기">
         </form>
-        <div> {{ result }}</div>
-    </div>
-</body>
-<script>
-    var app = new Vue({
-        el: '#app',
-        data: {
+        <div> {{ result }}</div></div>
+        `,
+        data() {
+            return {
             word: '안정화',
             myAnswer: '',
             result: ''
+            }
+        
         },
         methods: {
-            check_word(e){
+            check_word(e) {
                 e.preventDefault();
-                if(this.word[this.word.length -1] === this.myAnswer[0]){
+                if (this.word[this.word.length - 1] === this.myAnswer[0]) {
                     this.result = "정답 ";
                     this.word = this.myAnswer;
                     this.myAnswer = '';
@@ -41,9 +51,12 @@
                 }
             }
         }
-
-
     })
 </script>
-
+<script>
+   const app = new Vue({
+        el: '#app',
+    })
+</script>
+</body>
 </html>
